loading + viewAll + no tasks

--- a/src/browser_action/parts/tasks.html
+++ b/src/browser_action/parts/tasks.html
@@ -55,7 +55,8 @@
 	        		<img class="removTask" src="/img/cancel.png" ng-click="task2('remove', $index)">
 	        	</span>
 	        </li>
-	        <button style="margin: 0 !important;" class="uk-button uk-button-default uk-width-1-1 uk-margin-small-bottom uk-button-small" ng-click="limitToX=='d'?limitToX=2:limitToX = 'd'; editTask();">{{limitToX=='d'?'Hide':'View All'}}</button>
+	        <li ng-if="!data.tasks.length">No tasks! You are free today.</li>
+	        <button ng-hide="completedCount < 3" style="margin: 0 !important;" class="uk-button uk-button-default uk-width-1-1 uk-margin-small-bottom uk-button-small" ng-click="limitToX=='d'?limitToX=2:limitToX = 'd'; editTask();">{{limitToX=='d'?'Hide':'View All'}}</button>
 	    </ul>
 	</div>
 </div>
