--- a/src/browser_action/parts/loading.html
+++ b/src/browser_action/parts/loading.html
@@ -1,3 +1,3 @@
 <div style="height: 0; top: 50%; left: 50%; width: 0; position: absolute;">
-    <img src="/img/loading.gif" style="margin-left: -4vw; margin-top: -4vw; width: 8vw;">
+    <img src="/img/loading.gif" style="margin-left: -4vw; margin-top: -4vw; width: 8vw; min-width: 8vw;">
 </div>
