Play page + API

--- a/src/browser_action/parts/tasks.html
+++ b/src/browser_action/parts/tasks.html
@@ -42,9 +42,9 @@
 	        <li class="ui-state-disableded input" ng-click="editTask();"><input ng-model="app.inputText" type="text" placeholder="Write your next task here..." ng-keypress="addTask($event)"><img src="/img/add.png" ng-click="addTask()"></li>
 	        <li class="not-completed {{x.editable?'ui-state-disableded':''}}" ng-repeat="x in data.tasks" index="{{$index}}" ng-if="!x.completed" ng-click="x.editable?0:editTask();">
 	        	<span class="task-mark" style="border-color: rgba(216, 0, 39, {{1/data.tasks.length*(data.tasks.length-$index)}})"><img src="/img/play.png"></span>
-	        	<label ng-init="x.editable=!1;" contenteditable="{{x.editable}}" ng-bind="x.text" ng-click="x.editable?0:x.completed=!0; x.dateCompleted = Date.now(); arrayProc();"></label>
+	        	<label ng-init="x.editable=!1;" contenteditable="{{x.editable}}" ng-bind="x.text" ng-keyup="task2('editing', x, $event.currentTarget)" ng-click="task2('done', x)"></label>
 	        	<span class="task-options">
-	        		<img src="/img/play.png" ng-click="task2('play')">
+	        		<img src="/img/play.png" ng-click="task2('play', x, $index)">
 	        		<img src="/img/edit.png" ng-click="task2('edit', x, $event.currentTarget); x.editable=!0;">
 	        		<img class="removTask" src="/img/cancel.png" ng-click="task2('remove', $index)">
 	        	</span>
@@ -59,4 +59,8 @@
 	        <button ng-hide="completedCount < 3" style="margin: 0 !important;" class="uk-button uk-button-default uk-width-1-1 uk-margin-small-bottom uk-button-small" ng-click="limitToX=='d'?limitToX=2:limitToX = 'd'; editTask();">{{limitToX=='d'?'Hide':'View All'}}</button>
 	    </ul>
 	</div>
+</div>
+
+<div class="options">
+    <a href="#!/settings" uk-icon="icon: settings"></a>
 </div>
