--- a/src/override/override.html
+++ b/src/override/override.html
@@ -3,6 +3,8 @@
 <head>
     <title>Tasks</title>
 </head>
+<!-- uk-light uk-background-secondary -->
+<!-- uk-dark uk-background-muted -->
 <body ng-app="main" ng-controller="AppCtrl">
     <script src="/js/newtabInit.js"></script>
 
@@ -11,9 +13,9 @@
 
         <div>
             <md-content ng-view>
-                <div style="height: 0; top: 50%; left: 50%; width: 0; position: absolute;">
+                <!-- <div style="height: 0; top: 50%; left: 50%; width: 0; position: absolute;">
                     <img src="/img/loading.gif" style="margin-left: -4vw; margin-top: -4vw; width: 8vw; min-width: 8vw;">
-                </div>
+                </div> -->
             </md-content>
         </div>
 
