--- a/src/browser_action/parts/settings.html
+++ b/src/browser_action/parts/settings.html
@@ -1,11 +1,11 @@
-<div class="uk-flex-center" uk-grid>
-	<div class="uk-padding uk-width-1-3@xl uk-width-2-5@l uk-width-1-2@m uk-width-1-2@s uk-width-1">
+<div class="uk-flex-center uk-padding" uk-grid>
+	<div class="uk-width-1-3@xl uk-width-2-5@l uk-width-1-2@m uk-width-1-2@s uk-width-1">
 		settings in development
 	</div>
 </div>
 
 
 
-<div class="options">
+<div class="options" ng-if="!window.settingsOnly">
     <a href="#!/tasks" uk-icon="icon: close"></a>
 </div>
