--- a/src/browser_action/parts/tasks.html
+++ b/src/browser_action/parts/tasks.html
@@ -31,8 +31,9 @@
 </md-list>
 <button ng-click="limitToX=='d'?limitToX=2:limitToX = 'd'">{{limitToX=='d'?'Hide':'View All'}}</button> -->
 <!-- |{{theme.colors.frame | join}}| -->
-<div class="uk-flex-center" uk-grid ng-init="listInit(); limitToX = 2;">
-	<div class="uk-padding uk-width-1-3@xl uk-width-2-5@l uk-width-1-2@m uk-width-1-2@s uk-width-1">
+<div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" ng-click="editTask();"></div>
+<div class="uk-flex-center uk-padding" uk-grid ng-init="listInit(); limitToX = 2;">
+	<div class="uk-width-1-3@xl uk-width-2-5@l uk-width-1-2@m uk-width-1-2@s uk-width-1">
 
 		<h2 class="uk-text-center"><span>{{date.dayOfWeek}} {{date.day}} {{date.month}}</span></h2>
 	    <h5 class="uk-heading-line uk-text-center"><span>{{date.time}}</span></h5>
