--- a/src/override/override.html
+++ b/src/override/override.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="icon" type="image/png" href="/images/play.png">
     <title>Tasks</title>
 </head>
 <!-- uk-light uk-background-secondary -->
