--- a/src/browser_action/parts/play.html
+++ b/src/browser_action/parts/play.html
@@ -1,4 +1,6 @@
 <div class="uk-position-center uk-width-1-2@xl uk-width-1-2@l uk-width-1-2@m uk-width-1-2@s uk-width-1" uk-grid>
+	<h1 class="uk-heading-primary uk-text-center uk-text-{{window.paused?'success':'warning'}}">{{window.paused?'RESTING':'WORKING'}}</h1>
+	<br>
 	<div ng-init="window.ddd = date; window.ddd.setSeconds ( date.getSeconds() + window.flow.timing );" uk-countdown="date: {{window.ddd.toString()}}" class="uk-text-center">
 	    <span class="uk-countdown-number uk-countdown-hours"></span>
 	    <span class="uk-countdown-separator">:</span>
@@ -11,7 +13,7 @@
 		<span ng-if="window.paused">Be here at {{window.ddd.getHours()}}:{{window.ddd.getMinutes()}}</span>
 	</h5>
 	<div uk-margin class="uk-text-center" style="padding-bottom: 10vh;">
-	    <button class="uk-button uk-button-{{window.paused?'primary':'secondary'}}" ng-click="task2('pause');">{{window.paused?'Resume':'Pause'}}</button>
+	    <button class="uk-button uk-button-{{window.paused?'primary':'secondary'}}" ng-click="task2('pause');">{{window.paused?'Start':'Pause'}}</button>
 	    <button class="uk-button uk-button-danger" ng-click="task2('stop')">Stop</button>
 	    <div class="uk-inline">
 	    	<button class="uk-button uk-button-primary" ng-click="task2('done', window.task)">Done</button>
