--- a/src/browser_action/parts/tasks.html
+++ b/src/browser_action/parts/tasks.html
@@ -59,9 +59,10 @@
 	        <li ng-if="!data.tasks.length">No tasks! Add one right now.</li>
 	        <button ng-hide="completedCount < 3" style="margin: 0 !important;" class="uk-button uk-button-default uk-width-1-1 uk-margin-small-bottom uk-button-small" ng-click="limitToX=='d'?limitToX=2:limitToX = 'd'; editTask();">{{limitToX=='d'?'Hide':'View All'}}</button>
 	    </ul>
+		<!-- <button style="position: relative;" class="uk-button uk-button-default" ng-click="window.UIkit.modal(window.$('#modal-overflow')[0]).show()">Open</button> -->
 	</div>
 </div>
-
 <div class="options">
+    <a ng-click="window.UIkit.modal(window.$('#modal-overflow')[0]).show();" uk-icon="icon: question" class="uk-margin-small-right" ng-if="window.questionMark"></a>
     <a href="#!/settings" uk-icon="icon: settings"></a>
 </div>
