--- a/src/override/override.html
+++ b/src/override/override.html
@@ -30,15 +30,27 @@
             <button class="uk-modal-close-default" type="button" uk-close></button>
 
             <div class="uk-modal-header">
-                <h2 class="uk-modal-title">HOW TO USE IT</h2>
+                <h2 class="uk-modal-title">HOW TO BE PRODUCTIVE</h2>
             </div>
 
             <div class="uk-modal-body" uk-overflow-auto>
 
-                <ul class="uk-list uk-list-bullet" style="box-shadow: none; border: none !important;">
-                    <li>List item 1</li>
-                    <li>List item 2</li>
-                    <li>List item 3</li>
+                <ul class="uk-list uk-list-large" style="box-shadow: none; border: none !important;">
+                    <li>
+                        <h4>1. Type any task.</h4>
+                        <img src="/img/screen1.jpg">
+                    </li>
+                    <li>
+                        <h4>2. Press play button.</h4>
+                        <img src="/img/screen2.jpg">
+                    </li>
+                    <li>
+                        <h4>3. Work on the task until the timer ends, then take rest.</h4>
+                        <img src="/img/screen3.jpg">
+                        <br>
+                        <br>
+                        <b>Go to options to change work/break duration.</b>
+                    </li>
                 </ul>
 
             </div>
